--- a/src/styles/room-code.scss
+++ b/src/styles/room-code.scss
@@ -2,8 +2,8 @@
   height: 40px;
   border-radius: 8px;
   overflow: hidden;
-  
-  background: #FFF;
+
+  background: #fff;
   border: 1px solid #835afd;
   cursor: pointer;
 
