--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -10,7 +10,7 @@
 
   &.highlighted {
     background: #f4f0ff;
-    border: 1px solid #835AFD;
+    border: 1px solid #835afd;
 
     footer .user-info span {
       color: #29292e;
@@ -18,7 +18,7 @@
   }
 
   &.answered {
-    background: #DBDCDD;
+    background: #dbdcdd;
   }
 
   p {
